--- a/front/src/App.css
+++ b/front/src/App.css
@@ -12,3 +12,16 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  list-style: none;
+}
+
+ul li {
+  margin: 0 1rem;
+  font-size: 2rem;
+  text-decoration: none;
+}
